--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -18,7 +18,7 @@
         <!-- small box -->
         <div class="small-box bg-aqua">
           <div class="inner">
-            <h3>Clientes</h3>
+            <h3 style="color: white">Clientes</h3>
 
             <p>1 clientes registardos</p>
           </div>
@@ -33,7 +33,7 @@
         <!-- small box -->
         <div class="small-box bg-green">
           <div class="inner">
-            <h3>Proveedores</h3>
+            <h3 style="color: white">Proveedores</h3>
 
             <p>1 proveedores registrados</p>
           </div>
@@ -48,7 +48,7 @@
         <!-- small box -->
         <div class="small-box bg-yellow">
           <div class="inner">
-            <h3>Productos</h3>
+            <h3 style="color: white">Productos</h3>
 
             <p>1 productos registrados</p>
           </div>
