--- a/src/app/components/users/users.component.html
+++ b/src/app/components/users/users.component.html
@@ -1,3 +1,161 @@
-<p>
-  users works!
-</p>
+<mk-box [isRemovable]="false" [isCollapsed]="false">
+  <div class="container">
+      <div class="row">
+          <div class="col-4">
+              <button nz-button nzType="primary" class="pull-left" (click)="showModalAgregarUsuario()">Agregar usuario</button>
+          </div>
+      </div>
+  </div>
+</mk-box>
+
+<div style="background: white">
+  <nz-table #tableUsers [nzData]="users" nzBordered="true" [nzLoading]="isLoading" nzSize="small" nzShowPagination="true">
+      <thead>
+          <tr>      
+              <th>Nombre</th>
+              <th>Usuario</th>
+              <th>Rol</th>
+              <th>Acciones</th>
+          </tr>
+      </thead>
+      <tbody>
+          <tr *ngFor="let data of tableUsers.data">
+              <td >{{ data.nombre_empleado }}</td>
+              <td >{{ data.nombre_usuario }}</td>
+              
+              <ng-container *ngIf="data.role == 'admin'; then adminThen;"></ng-container>
+              <ng-template #adminThen>
+                <td >Administrador</td>
+              </ng-template>
+              
+              <td style="text-align: center">
+                  <button style="margin-right: 10px" nzTitle="Editar" nzPlacement="topCenter" nz-tooltip class="btn btn-success" (click)="showModalEditarUsuario(data)"><i class="fa fa-pencil" aria-hidden="true"></i></button>                    
+                  <button class="btn btn-danger" nzTitle="Eliminar" nzPlacement="topCenter" nz-tooltip (click)="showDeleteConfirm(data)"><i class="fa fa-trash" aria-hidden="true"></i></button>
+              </td>
+          </tr>
+      </tbody>
+  </nz-table>
+</div>
+
+
+<!--                                             Agregar Usuario                                                                   -->
+ 
+<nz-modal [(nzVisible)]="isVisibleAgregarUsuario" [nzWidth]="800" [nzTitle]="modalTitleAgregarUsuario" [nzContent]="modalContentAgregarUsuario" [nzFooter]="modalFooterAgregarUsuario" (nzOnCancel)="handleCancelAgregarUsuario()">
+  <ng-template #modalTitleAgregarUsuario>Nuevo usuario</ng-template>
+
+  <ng-template #modalContentAgregarUsuario>
+      <form [formGroup]="userAgregarForm">
+          <div class="row">
+              <div class="form-group">
+                    <div class="col-md-3">
+                        <label for="">Nombre</label>
+                            <input type="text" class="form-control" formControlName="nombre_empleado">  
+                                <div *ngIf="submittedAgregarUsuario && fau.nombre_empleado.errors" class="invalid-feedback d-block">
+                                    <div *ngIf="fau.nombre_empleado.errors.required" class="text-danger">Campo requerido</div>
+                                </div>
+                    </div>
+                    <div class="col-md-3">
+                        <label for="">Usuario</label>
+                            <input type="text" class="form-control" formControlName="nombre_usuario">  
+                                <div *ngIf="submittedAgregarUsuario && fau.nombre_usuario.errors" class="invalid-feedback d-block">
+                                    <div *ngIf="fau.nombre_usuario.errors.required" class="text-danger">Campo requerido</div>
+                                </div>             
+                    </div>
+                    <div class="col-md-3">
+                        <label for="">Contraseña</label>
+                        <nz-input-group [nzSuffix]="suffixTemplate">
+                        <input
+                            [type]="passwordVisible ? 'text' : 'password'"
+                            nz-input
+                            placeholder="*****"
+                            [(ngModel)]="password" formControlName="contrasena"
+                        />             
+                        </nz-input-group>
+                        <ng-template #suffixTemplate>
+                        <i nz-icon [nzType]="passwordVisible ? 'eye-invisible' : 'eye'" (click)="passwordVisible = !passwordVisible"></i>
+                        </ng-template>
+                            <div *ngIf="submittedAgregarUsuario && fau.contrasena.errors" class="invalid-feedback d-block">
+                                <div *ngIf="fau.contrasena.errors.required" class="text-danger">Campo requerido</div>
+                            </div>
+                    </div>    
+                    <div class="col-sm-3">
+                        <label>Rol</label>
+                        <div class="input-group">
+                            <nz-select style="width: 140px;" formControlName="rol" nzShowSearch nzAllowClear nzPlaceHolder="Seleccionar..">
+                                <nz-option nzLabel="Administrador" nzValue="admin"></nz-option>
+                            </nz-select>
+                        </div>
+                            <div *ngIf="submittedAgregarUsuario && fau.rol.errors" class="invalid-feedback d-block">
+                                <div *ngIf="fau.rol.errors.required" class="text-danger">Campo requerido</div>
+                            </div>
+                    </div> 
+              </div>
+          </div>
+      </form>
+  </ng-template>
+
+  <ng-template #modalFooterAgregarUsuario>
+      <button nz-button nzType="default" (click)="handleCancelAgregarUsuario()">Cerrar</button>
+      <button nz-button nzType="primary" (click)="onSubmitAgregarUsuario()" [nzLoading]="isConfirmLoadingAgregarUsuario">Guardar cambios</button>
+  </ng-template>
+</nz-modal>
+
+
+<!--                                             Editar Usuario                                                                   -->
+ 
+<nz-modal [(nzVisible)]="isVisibleEditarUsuario" [nzWidth]="800" [nzTitle]="modalTitleEditarUsuario" [nzContent]="modalContentEditarUsuario" [nzFooter]="modalFooterEditarUsuario" (nzOnCancel)="handleCancelEditarUsuario()">
+  <ng-template #modalTitleEditarUsuario>Editar usuario</ng-template>
+
+  <ng-template #modalContentEditarUsuario>
+      <form [formGroup]="userEditarForm">
+          <div class="row">
+              <div class="form-group">
+                <div class="col-md-3">
+                    <label for="">Nombre</label>
+                        <input type="text" class="form-control" formControlName="nombre_empleado">
+                        <div *ngIf="submittedEditarUsuario && feu.nombre_empleado.errors" class="invalid-feedback d-block">
+                            <div *ngIf="feu.nombre_empleado.errors.required" class="text-danger">Campo requerido</div>
+                        </div>
+                </div>
+                <div class="col-md-3">
+                    <label for="">Usuario</label>
+                        <input type="text" class="form-control" formControlName="nombre_usuario">  
+                        <div *ngIf="submittedEditarUsuario && feu.nombre_usuario.errors" class="invalid-feedback d-block">
+                            <div *ngIf="feu.nombre_usuario.errors.required" class="text-danger">Campo requerido</div>
+                        </div>             
+                </div>
+                <div class="col-md-3">
+                    <label for="">Contraseña</label>
+                    <nz-input-group [nzSuffix]="suffixTemplate">
+                    <input
+                        [type]="passwordVisible ? 'text' : 'password'"
+                        nz-input
+                        placeholder="*****"
+                        [(ngModel)]="password" formControlName="contrasena"
+                    />
+                    </nz-input-group>
+                    <ng-template #suffixTemplate>
+                    <i nz-icon [nzType]="passwordVisible ? 'eye-invisible' : 'eye'" (click)="passwordVisible = !passwordVisible"></i>
+                    </ng-template>
+                </div>    
+                <div class="col-sm-3">
+                    <label>Rol</label>
+                    <div class="input-group">
+                        <nz-select style="width: 140px;" formControlName="rol" nzShowSearch nzAllowClear nzPlaceHolder="Seleccionar..">
+                            <nz-option nzLabel="Administrador" nzValue="admin"></nz-option>
+                        </nz-select>
+                    </div>
+                    <div *ngIf="submittedEditarUsuario && feu.rol.errors" class="invalid-feedback d-block">
+                        <div *ngIf="feu.rol.errors.required" class="text-danger">Campo requerido</div>
+                    </div>
+                </div> 
+              </div>
+          </div>
+      </form>
+  </ng-template>
+
+  <ng-template #modalFooterEditarUsuario>
+      <button nz-button nzType="default" (click)="handleCancelEditarUsuario()">Cerrar</button>
+      <button nz-button nzType="primary" (click)="onSubmitEditarUsuario()" [nzLoading]="isConfirmLoadingEditarUsuario">Guardar cambios</button>
+  </ng-template>
+</nz-modal>
